added aws uploads for posts

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
-SECRET_KEY=lkasjdf09ajsdkfljalsiorj12n3490re9485309irefvn,u90818734902139489230
+SECRET_KEY=lkasjdf09ajsdkfljalsiorj12n3490re9485309irefvn,u908187349021394333333
 DATABASE_URL=sqlite:///dev.db
 SCHEMA=flask_schema
+AWS_ACCESS_KEY_ID = whatever_s3_generated
+AWS_SECRET_ACCESS_KEY = whatever_s3_generated
