--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-SECRET_KEY=lkasjdf09ajsdkfljalsiorj12n3490re9485309irefvn,u908187349021394333333
+SECRET_KEY=generate_a_super_secret_key
 DATABASE_URL=sqlite:///dev.db
 SCHEMA=flask_schema
 AWS_ACCESS_KEY_ID = whatever_s3_generated
